[package]
name = "hurl"
version = "0.2.7"
authors = ["Fabrice Reix <fabrice.reix@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "hurl"

[dependencies]
clap = "2.33.0"
structopt = "0.2.10"
reqwest = "0.9.20"
libxml = "0.2.12"
regex = "1.1.0"
serde_json = "1.0.40"
xmlparser = "0.10.0"
roxmltree = "0.7.1"
serde-xml-rs = "0.3.1"
atty = "0.2.13"
jsonpath = "0.1.1"
url = "2.1.0"
sxd-document = "0.3.2"
serde = "1.0.104"
percent-encoding = "2.1.0"
cookie = "0.12.0"
base64 = "0.11.0"
